flux_serve/specs/load.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: load
  name: load
spec:
  selector:
    matchLabels:
      app: load
  template:
    metadata:
      labels:
        app: load
    spec:
      nodeSelector:
        alpha.eksctl.io/nodegroup-name: flux-usw2-ng
      containers:
      - name: load
        image: public.ecr.aws/docker/library/python
        imagePullPolicy: Always
        command:
          - /bin/bash
          - -c
          - -x
          - |
            SLEEP_TIME=10
            while true; do
              curl -X POST  -H "Content-Type: application/json" -d '{"prompt": "A majestic mountainscape in a surreal style","num_inference_steps": 10}' http://$FLUX_NEURON_256X144_MODEL_API_SERVICE_HOST:8000/generate
              sleep $SLEEP_TIME
            done
