flux_serve/specs/flux-neuron-256x144-model-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: flux-neuron-256x144-model-api
spec:
  selector:
    app: flux-neuron-256x144-model-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flux-neuron-256x144-model-api
  name: flux-neuron-256x144-model-api
spec:
  selector:
    matchLabels:
      app: flux-neuron-256x144-model-api
  template:
    metadata:
      labels:
        app: flux-neuron-256x144-model-api
    spec:
      nodeSelector:
        karpenter.sh/nodepool: amd-neuron-inf2
      serviceAccountName: flux-serviceaccount
      schedulerName: my-scheduler
      containers:
      - name: app
        image: 920372998901.dkr.ecr.us-west-2.amazonaws.com/model:amd64-neuron
        imagePullPolicy: Always
        volumeMounts:
          - name: dshm
            mountPath: /dev/shm
          - name: s3-flux-pvc
            mountPath: /model
        command: ["sh", "-c", "uvicorn flux_model_api:app --host=0.0.0.0"]
        resources:
          requests:
            aws.amazon.com/neuron: 6
          limits:
            aws.amazon.com/neuron: 6
        ports:
          - containerPort: 8000
            protocol: TCP
        readinessProbe:
          httpGet:
            path: /readiness
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 10
      volumes:
      - name: workdir
        emptyDir: {}
      - name: dshm
        emptyDir:
          medium: Memory
      - name: s3-flux-pvc
        persistentVolumeClaim:
          claimName: s3-flux-pvc
