flux_serve/specs/mllama-32-11b-vllm-trn1-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: mllama-32-11b-vllm-trn1
spec:
  selector:
    app: mllama-32-11b-vllm-trn1
  ports:
    - port: 8000
      targetPort: 8000
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mllama-32-11b-vllm-trn1
  name: mllama-32-11b-vllm-trn1
spec:
  selector:
    matchLabels:
      app: mllama-32-11b-vllm-trn1
  template:
    metadata:
      labels:
        app: mllama-32-11b-vllm-trn1
    spec:
      nodeSelector:
        karpenter.sh/nodepool: amd-neuron-trn1
      serviceAccountName: appsimulator
      #serviceAccountName: flux-serviceaccount 
      schedulerName: my-scheduler
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
      containers:
      - name: app
        image: 891377065549.dkr.ecr.us-west-2.amazonaws.com/model:amd64-neuron
        #image: 920372998901.dkr.ecr.us-west-2.amazonaws.com/model:amd64-neuron
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /vllm_config.yaml
            name: vllm-config-volume
            subPath: vllm_config.yaml
          - mountPath: /dev/shm
            name: dshm
        command: 
        - /bin/bash
        - "-exc"
        - |
          set -x
          pip install --upgrade pip
          pip config set global.extra-index-url https://pip.repos.neuron.amazonaws.com
          pip install --upgrade "neuronx-distributed==0.11.0" --extra-index-url https://pip.repos.neuron.amazonaws.com
          pip install --upgrade "neuronx-distributed-inference>=0.2.0" --extra-index-url https://pip.repos.neuron.amazonaws.com
          pip install --upgrade transformers accelerate protobuf sentence_transformers tenacity torch-neuron
          git clone -b neuron-2.22-vllm-v0.7.2 https://github.com/aws-neuron/upstreaming-to-vllm.git
          cd upstreaming-to-vllm
          pip install -r requirements-neuron.txt
          VLLM_TARGET_DEVICE="neuron" pip install -e .
          cd /
          python /download_hf_model.py
          #python /mllama-offline.py
          uvicorn vllm_model_api_m:app --host=0.0.0.0
        resources:
          requests:
            aws.amazon.com/neuron: 16
          limits:
            aws.amazon.com/neuron: 16
        ports:
          - containerPort: 8000
            protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /readiness
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 280
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
      volumes:
      - name: vllm-config-volume
        configMap:
          name: mllama-32-11b-vllm-trn1-config
      - name: dshm
        emptyDir:
          medium: Memory
